cm4all-myproxy (0.30) unstable; urgency=low

  * add option "populate_io_buffers"
  * fix build with glibc 2.43

 --   

cm4all-myproxy (0.29) unstable; urgency=low

  * fix crash after send error
  * lua: new libraries:
    - "control_client
    - "socket"

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Jan 2026 09:34:10 +0100

cm4all-myproxy (0.28) unstable; urgency=low

  * lua: support coroutine.yield(), coroutine.resume()
  * lua: check number of Lua return values (fixes assertion failure)
  * pg: fix use-after-free bug

 -- Max Kellermann <mk@cm4all.com>  Wed, 22 Oct 2025 11:13:13 +0200

cm4all-myproxy (0.27) unstable; urgency=low

  * fix assertion failure with "disconnect_unavailable" option
  * pg: no delay for first auto-reconnect
  * pg: fix assertion failure
  * pg: fix stalled connection

 -- Max Kellermann <mk@cm4all.com>  Tue, 07 Oct 2025 15:10:36 +0200

cm4all-myproxy (0.26) unstable; urgency=low

  * allow intercepting INIT_DB packets
  * close pidfds and cgroup file descriptors on disconnect
  * log proper error message instead of "C++ exception"
  * systemd: do not restart on configuration errors
  * systemd: raise LimitNOFILE to 1048576
  * debian: start daemon during initial installation, stop on uninstall

 -- Max Kellermann <mk@cm4all.com>  Mon, 01 Sep 2025 21:02:49 +0200

cm4all-myproxy (0.25) unstable; urgency=low

  * no "disconnect_unavailable" for read-only connections

 -- Max Kellermann <mk@cm4all.com>  Thu, 12 Jun 2025 17:12:37 +0200

cm4all-myproxy (0.24) unstable; urgency=low

  * add connect option "read_only"
  * control: allow controlling the server with UDP datagrams

 -- Max Kellermann <mk@cm4all.com>  Wed, 11 Jun 2025 11:03:54 +0200

cm4all-myproxy (0.23) unstable; urgency=low

  * strip trailing null byte from password
  * switch to C++23
  * require Meson 1.2

 -- Max Kellermann <mk@cm4all.com>  Mon, 02 Jun 2025 08:18:45 +0200

cm4all-myproxy (0.22) unstable; urgency=low

  * pg: support integer parameters