@@ -1,6 +1,7 @@
 cm4all-myproxy (0.30) unstable; urgency=low
 
   * add option "populate_io_buffers"
+  * prometheus: export event loop metrics
   * fix build with glibc 2.43
 
  --   
